samples/_failures_safe/1761312087_cdcd5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e4cdc00.c: In function ‘main’:
./samples/SAFE/__tmp_6e4cdc00.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
